Fixed bugs
- Disabled carousel over-scrolling while carousel is active

- Hidden scrollbars for different browers (Firefox, etc.)

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   text-decoration: none;
   color: black;
   font-weight: var(--font-regular);
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 body,
